--- a/bonusPage.html
+++ b/bonusPage.html
@@ -83,5 +83,6 @@
             vizElement.parentNode.insertBefore(scriptElement, vizElement);                
     </script>
     <br><br><br>
+    <a href = "#top">Back to Top</a>
 </body>
 </html>
